# Script

project/InspireFace_demo_cpp/: CMakeLists.txt  README.md
project/InspireFace_demo_cpp/src/: face_common.h  inspireface_wrapper.hpp  main.cpp
project/cpp-std-project/: CMakeLists.txt
project/cpp-std-project/include/math/: calc.h
project/cpp-std-project/include/utils/: str.h
project/cpp-std-project/src/math/: calc.cpp
project/cpp-std-project/src/utils/: str.cpp
project/cpp-std-project/tests/: CMakeLists.txt  test_calc.cpp  test_str.cpp
project/demo_cpp/: build_cpp_project.sh
project/demo_cpp/eigen_cpp_demo/: CMakeLists.txt  README.md
project/demo_cpp/eigen_cpp_demo/src/: main.cpp
project/demo_cpp/insightface_app_demo/: main.py  model.py
project/demo_cpp/insightface_onnx_infer/: .gitignore  CMakeLists.txt  scrfd.py
project/demo_cpp/insightface_onnx_infer/include/: SCRFD.cpp  SCRFD.h
project/demo_cpp/insightface_onnx_infer/src/: scrfd_demo.cpp
project/demo_cpp/json_cpp_demo/: CMakeLists.txt  README.md
project/demo_cpp/json_cpp_demo/src/: main.cpp
project/demo_cpp/yaml_cpp_demo/: CMakeLists.txt  README.md
project/ros2_cpp_ws/: .gitignore
project/ros2_cpp_ws/src/cpp_tutorial/: CMakeLists.txt  package.xml
project/ros2_cpp_ws/src/cpp_tutorial/launch/: launch.py
project/ros2_cpp_ws/src/cpp_tutorial/src/: publisher.cpp  subscriber.cpp
project/ros2_cpp_ws/src/inspire_face_demo_cpp/: CMakeLists.txt  package.xml
project/ros2_cpp_ws/src/inspire_face_demo_cpp/src/: inspire_face_demo_node.cpp  main.cpp
project/web_cpp/: build_cpp_project.sh
project/web_cpp/httplib_cpp_demo/: CMakeLists.txt
project/web_cpp/httplib_cpp_demo/src/: main.cpp
project/web_cpp/json_cpp/: .gitignore  README.md
project/web_cpp/yaml_cpp_demo/src/: main.cpp
